# mc-server-installer

./: .gitignore  Cargo.toml
.github/workflows/: build.yml  release.yml  rust.yml
src/: cli.rs  fs_utils.rs  main.rs  version.rs
src/modloader/: fabric.rs  forge.rs  mod.rs  neoforge.rs
src/modpack/: mod.rs
src/modpack/flame/: client.rs  manifest.rs  mod.rs  model.rs
src/modpack/ftb/: client.rs  mod.rs  model.rs
