[package]
name = "mc-server-installer"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.71", features = ["backtrace"] }
clap = { version = "4.3.3", features = ["derive", "env"] }
dotenv = { version = "0.15.0", features = ["clap"] }
futures-util = { version = "0.3.28", features = ["io", "tokio-io"] }
log = "0.4.18"
reqwest = { version = "0.11.18", default-features = false, features = ["rustls-tls", "stream"] }
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.96"
simplelog = "0.12.1"
thiserror = "1.0.40"
tokio = { version = "1.28.2", features = ["rt", "rt-multi-thread", "fs", "macros"] }
walkdir = "2.3.3"
zip = "0.6.6"
