[package]
name = "mc-server-installer"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.75", features = ["backtrace"] }
async-process = "1.8.1"
clap = { version = "4.4.6", features = ["derive", "env"] }
dotenv = { version = "0.15.0", features = ["clap"] }
futures-util = { version = "0.3.28", features = ["io", "tokio-io"] }
indicatif = "0.17.7"
log = "0.4.20"
reqwest = { version = "0.11.22", default-features = false, features = ["rustls-tls", "stream"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
simplelog = "0.12.1"
thiserror = "1.0.49"
tokio = { version = "1.32.0", features = ["rt", "rt-multi-thread", "fs", "macros"] }
urlencoding = "2.1.3"
walkdir = "2.4.0"
zip = "0.6.6"
