[package]
name = "mc-server-installer"
version = "0.3.1"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-process = "2.4.0"
chrono = "0.4.41"
clap = { version = "4.5.45", features = ["derive", "env"] }
color-eyre = "0.6.5"
dotenvy = "0.15.7"
futures-util = { version = "0.3.31", features = ["io", "tokio-io"] }
indicatif = "0.18.0"
log = "0.4.27"
regex = "1.11.1"
reqwest = { version = "0.12.23", default-features = false, features = ["rustls-tls", "stream"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
simplelog = "0.12.2"
thiserror = "2.0.14"
tokio = { version = "1.47.1", features = ["rt", "rt-multi-thread", "fs", "macros"] }
urlencoding = "2.1.3"
walkdir = "2.4.0"
zip = "4.3.0"

[dev-dependencies]
base64 = "0.22.1"